fixed homepage spacing issue

--- a/css/home.css
+++ b/css/home.css
@@ -77,6 +77,7 @@
 
 		.work {
 			align-self: end;
+			padding-bottom: 40px;
 
 			.number {
 				padding: 2px;
